Fixed centering issue on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -70,11 +70,8 @@
   height: 4rem;
   font-size: 1.2rem;
   opacity: 0.9;
-  /* position: fixed; */
-  /* display: flex;
-  justify-content: center;
-  text-align: center; */
 }
+
 .footerText
 {
   display: flex;
@@ -93,7 +90,6 @@
   text-align: center;
   margin: auto;
   margin-top: 22%;
-  
 }
 .card
 { 
@@ -201,8 +197,6 @@ p.card-text
 
 .contactSpecs
 {
-  color:red;
-  font-size: ;
   color: #b6bae7;
 }
 
@@ -231,6 +225,8 @@ p.card-text
     justify-self:center;
     align-items:center;
   }
+
+
 @media (max-width: 991.98px)
 {
   *
@@ -339,17 +335,16 @@ p.card-text
     width: 100%;
     border-top:6px solid #b6bae7;
     border-radius: 0.5%
-
   }
   .cardContainer 
   {
-    display: inline-grid; 
+    display: flex; 
     align-items: center;
     justify-self:center;
-    width: 90%;
+    width: auto;
     font-size: 1rem;
     border-radius: 2%;
-    margin-right: 30px;
+    margin-right: 35px;
   }
 
   .fixed-bottom
@@ -447,5 +442,16 @@ p.card-text
     font-size: 0.50rem;
     opacity: 0.9;
   }
+  
+  .formContainer.path
+  {
+    width: 25px;
+    height: 25px;
+  }
 
+  /* .social-svg
+  {
+    width: 25px;
+    height: 25px;
+  } */
 } 
